# jpegxl.io

./: .env  .firebaserc  .gitignore  CMakeLists.txt  README.md  SECURITY.md  contentlayer.config.js  firebase.json  next-sitemap.config.js  next.config.js  package-lock.json  package.json  styles.css  tailwind.config.js  tsconfig.json
blog/-comparisons/: jxl-vs-avif.txt  jxl-vs-bmp.txt  jxl-vs-gif.txt  jxl-vs-heif.txt  jxl-vs-jpeg2000.txt  jxl-vs-jpegxr.txt  jxl-vs-jpg.txt  jxl-vs-png.txt  jxl-vs-svg.txt  jxl-vs-webp.txt  jxl-vs-webp2.txt
blog/articles/: browser-support.mdx  faq.mdx  image-seo.mdx  image-sitemap.mdx  jpegxl-allrounder.mdx  rans.mdx
blog/releases/: 2021-10.mdx
blog/tutorials/: brave.mdx  chrome.mdx  cloudinary.mdx  css.mdx  digikam.mdx  edge.mdx  exiftool.mdx  exiv2.mdx  facebook.mdx  firefox.mdx  geeqie.mdx  gimp.mdx  gthumb.mdx  gwenview.mdx  html.mdx  imageglass.mdx  imagemagick.mdx  irfanview.mdx  kaos.mdx  kde.mdx  libvips.mdx  macos.mdx  nomacs.mdx  openmandriva.mdx  opera.mdx  photoqt.mdx  photostack.mdx  php.mdx  picview.mdx  qimgv.mdx  rust.mdx  safari.mdx  shimmercat.mdx  squoosh.mdx  thelounge.mdx  thunderbird.mdx  vivaldi.mdx  windows.mdx  wordpress.mdx  xnview.mdx
components/: DropArea.tsx  FilesList.tsx  FilesListItem.tsx  JXLConverter.tsx  Link.tsx  MDXComponents.tsx  OptionsBox.tsx
components/Blog/: Ad.tsx  Breadcrumbs.tsx  Checklist.tsx  ContentTable.tsx  H.tsx  Heading.tsx  Post.tsx  PostCloud.tsx  Posts.tsx  Questions.tsx  Sources.tsx  Syntax.tsx  Tags.tsx  Video.tsx  index.tsx
components/Home/: Advantages.tsx  Conversion.tsx  Dropzone.tsx  ImageComparison.tsx  ProgressBar.tsx  Tooltip.tsx
components/Layout/: CTA.tsx  CookieBanner.tsx  Footer.tsx  Header.tsx  Meta.tsx  Share.tsx  index.tsx
data/-comparisons/: jxl-vs-avif.txt  jxl-vs-bmp.txt  jxl-vs-gif.txt  jxl-vs-heif.txt  jxl-vs-jpeg2000.txt  jxl-vs-jpegxr.txt  jxl-vs-jpg.txt  jxl-vs-png.txt  jxl-vs-svg.txt  jxl-vs-webp.txt  jxl-vs-webp2.txt
data/articles/: _template.txt  benchmark.txt  browser-support.mdx  faq.mdx  faq.txt  image-seo.mdx  image-sitemap.mdx  imageviewer.txt  jpegxl-allrounder.mdx  jpegxl-overview.mdx  overview.txt  rans.mdx  support-browser.txt
data/blog/articles/: faq.mdx
data/blog/comparisons/: jxl-vs-avif.mdx  jxl-vs-bmp.mdx  jxl-vs-gif.mdx  jxl-vs-heif.mdx  jxl-vs-jpegxr.mdx  jxl-vs-svg.mdx  jxl-vs-webp.mdx  jxl-vs-webp2.mdx
data/blog/tutorials/: chrome.mdx  edge.mdx  kde.mdx  quicklook.mdx  safari.mdx  twitch.mdx
data/comparisons/: jxl-vs-avif.mdx  jxl-vs-avif.txt  jxl-vs-bmp.mdx  jxl-vs-bmp.txt  jxl-vs-gif.mdx  jxl-vs-gif.txt  jxl-vs-heif.mdx  jxl-vs-heif.txt  jxl-vs-jpeg2000.mdx  jxl-vs-jpeg2000.txt  jxl-vs-jpegxr.mdx  jxl-vs-jpegxr.txt  jxl-vs-jpg.mdx  jxl-vs-jpg.txt  jxl-vs-png.mdx  jxl-vs-png.txt  jxl-vs-svg.mdx  jxl-vs-svg.txt  jxl-vs-webp.mdx  jxl-vs-webp.txt  jxl-vs-webp2.mdx  jxl-vs-webp2.txt
data/news/: browser-support.mdx  jpegxl-allrounder.mdx
data/portfolio/: 2021-10.mdx
data/releases/: 2021-10.mdx
data/tutorials/: _template.txt  brave.mdx  chrome.mdx  cloudinary.mdx  css.mdx  digikam.mdx  edge.mdx  edge.txt  exiftool.mdx  exiv.mdx  exiv2.mdx  facebook.mdx  facebook.txt  firefox.mdx  firefox.txt  geeqie.mdx  gimp.mdx  gthumb.mdx  gthumb.txt  gwenview.mdx  html.mdx  imageglass.mdx  imageglass.txt  imagemagick.mdx  imagemagick.txt  irfanview.mdx  irfanview.txt  kaos.mdx  kde.mdx  kde.txt  libvips.mdx  linux.txt  macos.mdx  macos.txt  nomacs.mdx  openmandrina.mdx  openmandriva.mdx  openmandriva.txt  opera.mdx  opera.txt  (+22 more)
lib/ContentlayersDocumentTypes/: index.js
next-app/: package-lock.json  package.json
next-app/components/: FilesList.tsx  FilesListItem.tsx
next-app/jxl/: package-lock.json  package.json
next-app/jxl/components/: DropArea.tsx  FilesList.tsx  FilesListItem.tsx  JXLConverter.tsx  OptionsBox.tsx
next-app/jxl/pages/: _app.tsx  index.tsx
next-app/jxl/public/: wjpegxl.js  wjpegxl.wasm  worker.js
next-app/jxl/styles/: DropArea.module.css  FilesList.module.css  OptionsBox.module.css
next-app/pages/: index.tsx
next-app/styles/: FilesList.module.css  FilesListItem.module.css  Home.module.css  globals.css
pages/: _app.tsx  _document.tsx  avif.tsx  index.tsx  privacy-policy.tsx
pages/articles/: [slug].tsx
pages/blog/: index.tsx
pages/comparisons/: [slug].tsx
pages/news/: [slug].tsx
pages/portfolio/: [slug].tsx
pages/tutorials/: [slug].tsx
public/: comparison.jxl  console.js  detectSupport-jxl.js  detectSupport.js  hotjar.js  robots.txt  sitemap-0.xml  test.jxl  wjpegxl.js  wjpegxl.wasm  worker.js
public/comparison/: drop.jxl  smoke.jxl  sunflower.jxl  waterfalls.jxl
react-app/: index.html  index.js  package.json
react-app/src/: App.js  AppStyle.js  FileDropArea.js  FilesList.js  JXLConverter.js  wjpegxl
scripts/: images.js  rss.js  rss.mjs  sitemap.js
server/: run-server.sh  server.py
server/static/: index.html  index.js  test-avif.avif  test.webp:Zone.Identifier  wjpegxl  wjpegxl.wasm
src/: bind.cpp  compression_params.cpp  compression_params.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  params.cpp  params.h
src/tests/: bits_test.cpp  decode_test.cpp  encode_test.cpp  jxl_test.cpp
styles/: global.css  globals.css
test/: bind.cpp  run-tests.sh
test/static/: index.html  index.js
test/tests/: bit_reader_test.cpp  codec_test.cpp  decode_test.cpp  encode_test.cpp  jxl_test.cpp  test.cpp
utils/: allPosts.ts  mdx.ts  rss.js  run-cmake.sh  run-make.sh  run-tests.sh  sharp.js
